# adventofcode

./: .gitignore
2019/: main.rs
2019/day07/: Cargo.toml
2020/day13/: run.py
2022/: README.md  run.py
2022/day01/: run.py
2022/day02/: run.py
2022/day03/: run.py
2022/day04/: run.py
2022/day05/: run.py
2022/day06/: run.py
2022/day07/: run.py
2022/day08/: run.py
2022/day09/: run.py
2022/day10/: run.py
2022/day11/: run.py  run_simpler_lcm.py
2022/day12/: run.py
2022/day13/: run.py
2022/day14/: run.py
2022/day15/: run.py
2022/day16/: run.py
2022/day17/: run.py
2022/day18/: run.py
2022/day19/: input_small.txt  run.py
2022/day20/: run.py
2022/day21/: run.py
2022/day22/: run.py
2022/day23/: run.py
2022/day24/: run.py
2022/day25/: run.py
2023/day08/: Cargo.toml
2023/day10/: Cargo.toml
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2023/day14/: Cargo.toml
2023/day18/: Cargo.toml
2023/day19/: Cargo.toml  input.txt
2023/day20/: Cargo.toml
2024/: CHANGELOG.md  README.md  adv2024.cabal  package.yaml  stack.yaml
2024/app/: Main.hs
2024/src/: Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  (+17 more)
2025/: CMakeLists.txt
2025/include/: utils.hpp  utils.tpp
2025/src/01/: solution.cpp
2025/src/02/: solution.cpp
2025/src/03/: solution.cpp
2025/src/04/: solution.cpp
2025/src/05/: solution.cpp
2025/src/06/: solution.cpp
2025/src/07/: solution.cpp
2025/src/08/: solution.cpp
2025/src/09/: solution.cpp
2025/src/10/: solution.cpp
2025/src/common/: utils.cpp
(+50 files in other folders)
